# app-pipeline-sql-server

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_ORGANIZATION_SUMMARY.md  CODE_STATUS.md  CONTRIBUTING.md  FILE_MANAGEMENT_MIXED_SUPPORT.md  FIX_SUMMARY.md  FOLDER_LOGIC_TYPE_UPDATE.md  INSTALL.md  INTEGRATION_SUMMARY.md  LICENSE  LOG_OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PERFORMANCE_SUMMARY.md  PROGRESS_BAR_FIX.md  QUICK_START.md  README.md  SECURITY.md  SQLServerPipeline.spec  XLS_SUPPORT_SUMMARY.md  __init__.py  auto_process_cli.py  build_installer.bat  constants.py  create_test_file.py  download_icons_simple.py  example_folder_management_usage.py  example_performance_usage.py  install_requirements.bat  install_requirements.py  migrate_config.py  move_old_files_cli_app.py  performance_optimizations.py  pipeline_cli_app.py  pipeline_gui_app.bat  pipeline_gui_app.py  pyproject.toml  (+18 more)
.claude/: settings.local.json
.github/workflows/: linting.yml  release.yml  security-scan.yml  tests.yml
addons/: README.md
addons/column_mapper/: __init__.py  column_mapper_cli.py  run_column_auto_mapper.bat  run_column_mapper.bat
build_resources/: build_all.bat  create_icon.py  installer_script.iss
column_mapper_tool/: README.md  column_mapper_cli.py  constants.py  run_column_auto_mapper.bat  run_column_mapper.bat
column_mapper_tool/services/: __init__.py  auto_column_rename_service.py  ml_column_mapper.py
config/: __init__.py  database.py  json_manager.py  settings.py
config/backups/: app_settings.json.backup_20250817_224627  app_settings.json.backup_20250818_105905
deployment/: QUICK_START.md  README.md  README_BUILD.md  build_installer.bat  installer.iss  pipeline_gui_app.spec
docs/: DOCS_README.md  ENGINEERING_CONTEXT.md  PATTERNS_QUICK_GUIDE.md
monitoring/: README.md  __init__.py  dashboard.py
services/: README.md  __init__.py  data_processor_service.py  database_service.py  file_management_service.py  file_reader_service.py  file_service.py  permission_checker_service.py  preload_service.py  settings_manager.py
services/database/: __init__.py  connection_service.py  data_upload_service.py  data_validation_service.py  schema_service.py
services/file/: __init__.py  data_processor_service.py  file_management_service.py  file_reader_service.py
services/orchestrators/: __init__.py  config_orchestrator.py  database_orchestrator.py  file_orchestrator.py  utility_orchestrator.py  validation_orchestrator.py
services/utilities/: __init__.py  (+2 more)
tests/: README.md  __init__.py  test_health_check.py  test_integration.py  test_security.py
ui/: __init__.py  icon_manager.py  loading_dialog.py  login_window.py  main_window.py  theme.py  ui_callbacks.py
utils/: __init__.py  error_codes.py  error_helpers.py  file_helpers.py  health_check.py  helpers.py  logger.py  security_helpers.py  sql_utils.py  ui_helpers.py  validators.py
(+31 files in other folders)
