[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-sqlserver"
version = "1.0.0"
description = "ระบบ pipeline สำหรับการจัดการไฟล์และอัปโหลดข้อมูลไปยัง SQL Server"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "PIPELINE_SQLSERVER Development Team"}
]
keywords = ["sql-server", "data-pipeline", "excel", "csv", "etl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Office/Business",
]

dependencies = [
    "pandas>=1.5.0",
    "bcpandas>=1.7.0",
    "sqlalchemy>=2.0.0", 
    "pyodbc>=4.0.0",
    "customtkinter>=5.0.0",
    "send2trash>=1.8.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/pipeline-sqlserver"
Documentation = "https://github.com/your-org/pipeline-sqlserver/wiki"
Repository = "https://github.com/your-org/pipeline-sqlserver.git"
"Bug Tracker" = "https://github.com/your-org/pipeline-sqlserver/issues"

[project.scripts]
pipeline-cli = "pipeline_cli_app:main_cli"
pipeline-gui = "pipeline_gui_app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "services*", "ui*", "utils*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["config", "services", "ui", "utils"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "customtkinter.*",
    "send2trash.*",
    "pyodbc.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=config",
    "--cov=services", 
    "--cov=ui",
    "--cov=utils",
]